# GloomLake

./: .gitignore  2026-05-04_ui-audit.md  Changelog.md  LOCAL_WORKFLOW.md  README.md  _haliya_check.py  _show_panel.py  check_layout.py  debug_report.md  fix_indentation.py  pyproject.toml  requirements.txt  run.py  scaffold_gui.py  scaffold_gui_backup.py  test_auto_analysis.py  test_auto_analysis_fixed.py  test_card_examples.py  test_gui_layout.py  test_new_features.py
.clinerules/: project-context.md
.github/workflows/: validate.yml
.kilo/plans/: 1776406133930-happy-nebula.md  1776713172059-shiny-panda.md  manabase_optimization.md
assets/data/: cards.db
cards_by_category/artifact/: artifact_a.csv  artifact_b.csv  artifact_c.csv  artifact_d.csv  artifact_e.csv  artifact_f.csv  artifact_g.csv  artifact_h.csv  artifact_i.csv  artifact_j.csv  artifact_k.csv  artifact_l.csv  artifact_m.csv  artifact_n.csv  artifact_o.csv  artifact_p.csv  artifact_q.csv  artifact_r.csv  artifact_s.csv  artifact_t.csv  artifact_u.csv  artifact_v.csv  artifact_w.csv
docs/: SCRIPTS.md
docs/changelog/: SPEC.md  (+3 more)
plans/: gui_overhaul.md  synergy_architectural_changes.md  synergy_gui_integration.md
scripts/: fetch_cards_lowmem.py  generate_deck_scaffold.py  goldfish_autoresearch.py  goldfish_autoresearch_cli.py  mtg_utils.py  scaffold_gui.py  synergy_analysis.py  synergy_engine.py  synergy_report.py  synergy_thresholds.py  synergy_types.py
test-corpus/: ESPLOG.scaffold.json  Esper.scaffold.json
tests/: conftest.py  test_card_analysis.py  test_card_lookup.py  test_synergy.py
(+385 files in other folders)
